# hibi_ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.sh
Formula/: hibi-ai.rb
commands/: update-docs.md
docs/: INDEX.md  README.md  RUNBOOK.md
plugins/: plugins.yaml
rules/: code-thresholds.md  essential-rules-ko.md  essential-rules.md  security-ko.md
skills/: commit-rules-ko.md  commit-rules.md  pull-request.md
src/: AGENTS-ko.md  AGENTS.md  CLAUDE-ko.md  CLAUDE.md  mcp.md  settings.json
statusline/: statusline_linux  statusline_macos
tools/hooks/memory-persistence/: Cargo.toml  README.md  build.sh
tools/hooks/memory-persistence/src/: lib.rs  pre_compact.rs  session_end.rs  session_start.rs
tools/installer/: Cargo.toml  build.sh  test_luma.rs
tools/installer/src/: app.rs  cli.rs  component.rs  loading.rs  main.rs  mcp.rs  plugin.rs  process_exec.rs  theme.rs  tree.rs
tools/installer/src/app/: input.rs  mod.rs  navigation.rs  processing.rs  selection.rs  settings.rs  source_wizard.rs  sources.rs  types.rs
tools/installer/src/fs/: diff.rs  installer.rs  mod.rs  scanner.rs
tools/installer/src/fs/installer/: mcp.rs  merge.rs  mod.rs  plugin.rs  process.rs  settings.rs
tools/installer/src/fs/scanner/: components.rs  external.rs  mcp.rs  mod.rs  plugin.rs  validation.rs
tools/installer/src/source/: config.rs  git.rs  mod.rs
tools/installer/src/ui/: cli_selection.rs  diff.rs  env_input.rs  installing.rs  list.rs  loading_screen.rs  mcp_list.rs  mod.rs  plugin_list.rs  project_path.rs  source_wizard.rs  sources.rs  tabs.rs
(+474 files in other folders)
