[package]
name = "hibi_ai"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "hibi"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
terminal-light = "1.4"

# Filesystem
walkdir = "2.5"
dirs = "6.0"

# Diff
similar = { version = "2.6", features = ["text"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
