[package]
name = "hibi_ai"
version = "1.12.0"
edition = "2024"

[[bin]]
name = "hibi"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"
terminal-light = "1.4"

# Filesystem
walkdir = "2.5"
dirs = "6.0"

# Diff
similar = { version = "3.1", features = ["text"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2.5"

# Command parsing
shlex = "2"

# Error handling
anyhow = "1.0"

# Timeout
wait-timeout = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
